# pw-micclick

./: Cargo.toml  README.md
.forgejo/workflows/: build.yml
arch/: PKGBUILD  pw-micclick.service
examples/: example_audio-capture.rs
src/: main.rs
