[package]
name = "pw-micclick"
version = "0.1.0"
authors = ["Wüstengecko"]
edition = "2021"
description = "Makes clicking sounds when you start or stop talking"
repository = "https://github.com/Wuestengecko/pw-micclick"
license = "Apache-2.0"
keywords = ["pipewire", "click", "noise", "microphone"]
categories = ["multimedia::audio"]
publish = false
default-run = "pw-micclick"

[[bin]]
name = "pw-micclick"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
ears = "0.8.0"
gtk = "0.18.2"
libappindicator = "0.9.0"
libspa = "0.8.0"
libspa-sys = "0.8.0"
pipewire = "0.8.0"
thiserror = "2.0.12"
